# Backend/SocialCoordinationApp/Models/Enums/NotificationType.cs
@@ -1,0 +1,18 @@
+using Newtonsoft.Json;
+using Newtonsoft.Json.Converters;
+
+namespace SocialCoordinationApp.Models.Enums
+{
+    [JsonConverter(typeof(StringEnumConverter))]
+    public enum NotificationType
+    {
+        HangoutCreated,
+        HangoutInvite,
+        Rsvp,
+        GroupCreated,
+        MemberAdded,
+        MemberRemoved,
+        FriendRequest,
+        FriendAccepted
+    }
+}
